<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".FacebookPost">

    <ImageView
        android:id="@+id/image_view_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/profile_icon"
        android:focusable="true"
        android:src="@drawable/post_icon"
        app:layout_constraintEnd_toStartOf="@id/text_view1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/unblast"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/image_view_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/menu_icon"
        android:src="@drawable/menu_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_hrs"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_view1" />

    <ImageView
        android:id="@+id/view_global_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/global_icon"
        android:src="@drawable/world_icon"
        app:layout_constraintStart_toEndOf="@id/text_view2"
        app:layout_constraintTop_toBottomOf="@id/text_view1" />

    <TextView
        android:id="@+id/first_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_line"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_profile" />

    <TextView
        android:id="@+id/text_view3_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_line_link"
        android:textColor="@color/color_link"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_line" />

    <ImageView
        android:id="@+id/post_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_yellow"
        android:contentDescription="@string/post_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view3_link" />

    <ImageView
        android:id="@+id/post_like_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/post_like"
        android:src="@drawable/post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_image_view" />

    <TextView
        android:id="@+id/post_like_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:text="@string/post_like_numbers"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_like_icon"
        app:layout_constraintTop_toBottomOf="@id/post_image_view" />

    <TextView
        android:id="@+id/share_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="7dp"
        android:text="@string/share_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_like_numbers"
        app:layout_constraintTop_toBottomOf="@id/post_image_view" />

    <ImageView
        android:id="@+id/small_profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/small_profile_icon"
        android:src="@drawable/small_profile_icon"
        app:layout_constraintStart_toEndOf="@+id/share_number"
        app:layout_constraintTop_toBottomOf="@id/post_image_view" />

    <ImageView
        android:id="@+id/small_dropdown_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/small_dop_down_icon"
        android:src="@drawable/small_drop_down_icon"
        app:layout_constraintStart_toEndOf="@id/small_profile_icon"
        app:layout_constraintTop_toBottomOf="@id/post_image_view" />

    <View
        android:id="@+id/post_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/small_dropdown_icon" />

    <ImageView
        android:id="@+id/post_like_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icon_button"
        android:src="@drawable/like_icon_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_line1" />

    <TextView
        android:id="@+id/like_text_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:background="@color/color_transparent"
        android:text="@string/like_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_like_icon_button"
        app:layout_constraintTop_toBottomOf="@id/post_line1" />

    <ImageView
        android:id="@+id/post_comment_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icon_button"
        android:src="@drawable/comment_icon_button"
        app:layout_constraintStart_toStartOf="@id/like_text_post"
        app:layout_constraintTop_toBottomOf="@id/post_line1" />

    <TextView
        android:id="@+id/comment_text_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="13dp"
        android:background="@color/color_transparent"
        android:text="@string/comment_post_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_comment_icon_button"
        app:layout_constraintTop_toBottomOf="@id/post_line1"

        />

    <ImageView
        android:id="@+id/post_share_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_button"
        android:src="@drawable/share_post_icon_button"
        app:layout_constraintStart_toEndOf="@id/comment_text_post"
        app:layout_constraintTop_toBottomOf="@id/post_line1" />

    <TextView
        android:id="@+id/share_text_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="13dp"
        android:background="@color/color_transparent"
        android:text="@string/share_button"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_share_icon_button"
        app:layout_constraintTop_toBottomOf="@id/post_line1" />

    <View
        android:id="@+id/post_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/post_share_icon_button" />
</androidx.constraintlayout.widget.ConstraintLayout>